policies/Pod_Security_Standards_Baseline/disallow-add-capabilities.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-add-capabilities
  annotations:
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Capabilities permit privileged actions without giving full root access.
      Adding capabilities beyond the default set must not be allowed.      
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: capabilities
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Adding of additional capabilities beyond the default set is not allowed.
          The fields spec.containers[*].securityContext.capabilities.add and 
          spec.initContainers[*].securityContext.capabilities.add must be empty.          
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(capabilities):
                    X(add): "null"
            =(initContainers):
              - =(securityContext):
                  =(capabilities):
                    X(add): "null"
